# cpy-rs

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
cpy_binder/: all.html  attr.cpy_enum.html  attr.cpy_fn.html  attr.cpy_fn_c.html  attr.cpy_fn_py.html  attr.cpy_struct.html  index.html  macro.cpy_module!.html  macro.cpy_module.html  macro.export_cpy.html  sidebar-items.js
example/: Cargo.toml  pyproject.toml  rust-toolchain.toml
example/cpp_project/: CMakeLists.txt  main.cpp
example/py_project/: README.md  main.py
example/src/: build.rs  lib.rs
libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ABS_CNT.html  constant.ABS_MAX.html  constant.ACCOUNTING.html  constant.ADDR_COMPAT_LAYOUT.html  constant.ADDR_LIMIT_32BIT.html  constant.ADDR_LIMIT_3GB.html  constant.ADDR_NO_RANDOMIZE.html  constant.ADFS_SUPER_MAGIC.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MAXERROR.html  constant.ADJ_MICRO.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.ADJ_TAI.html  constant.ADJ_TICK.html  (+5596 more)
proc_macro2/: all.html  enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  (+7 more)
(+465 files in other folders)
