[package]
name = "cpy-binder"
version = "0.2.0"
edition = "2021"
description = "Helps when creating binds from Rust to C++ and Python"
repository = "https://github.com/patrickelectric/cpy-rs"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
pyo3 = { version = "0.18", features = ["extension-module"], optional = true }

[features]
python = ["pyo3"]
