[package]
name = "cpy-binder"
version = "1.0.0"
edition = "2021"
description = "Helps when creating binds from Rust to C++ and Python"
repository = "https://github.com/patrickelectric/cpy-rs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"], optional = true }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[features]
python = ["pyo3"]
