[package]
name = "example"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cpy-binder = { path = "../" }
pyo3 = { version = "0.18", features = ["extension-module"], optional = true }
rand = "0.8"

[features]
python = ["cpy-binder/python", "pyo3"]

[build-dependencies]
cbindgen = "0.21"
